--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Barlow', sans-serif;}
+    font-family: 'Barlow', sans-serif;
+}
 
 body {
     background-color: black;
@@ -40,4 +41,10 @@ img {
 img:hover {
     opacity: 0.7;
     border: 5px solid hotpink;
+}
+
+@media screen and (max-width:400px) {
+    img {
+        width: 100%;
+    }
 }
